test/syntaxerrors/TestJavaMissingParens.jdc
package exceptions;

public class JavaMissingArgParens {
    public static void main(String[] args) {
        System.out.println "Hello world!";
    }
}